Set up proper font features for all texts and added new font Inter

--- a/ui_assignment/pubspec.yaml
+++ b/ui_assignment/pubspec.yaml
@@ -107,6 +107,10 @@ flutter:
    - family: Onest-SemiBold
      fonts:
        - asset: assets/fonts/Onest/Onest-SemiBold.ttf
+
+   - family: Inter-Medium
+     fonts:
+       - asset: assets/fonts/Inter/Inter_18pt-Medium.ttf
 #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
